welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: not found: value Max
  if(a>=10 && a<=20 && b>=10 && b<=20)return Max(a,b)
                                             ^