welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = 
{
  if(a>=10 && a<=20 && b>=10 && b<=20)return Max(a,b)
  else if(a>=10 && a<=20)return a
  else if(b>=10 && b<=20)return b
  return 0
}